--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -37,7 +37,7 @@ script: |
   FAKETIME_HOST_PROGS=""
   FAKETIME_PROGS="date ar ranlib nm strip objcopy"
   HOST_CFLAGS="-fwrapv -fno-strict-aliasing -Werror -g"
-  HOST_CXXFLAGS="-fwrapv -fno-strict-aliasing -Werror -g"
+  HOST_CXXFLAGS="-fwrapv -fno-strict-aliasing -g"
   HOST_LDFLAGS=-static-libstdc++
 
   export QT_RCC_TEST=0
